--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,8 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.6.0-rc.1"
+axum-macros = "0.2.3"
 color-eyre = "0.6.2"
 poise = "0.4.1"
+reqwest = { version = "0.11.12", features = ["json", "rustls-tls"], default-features = false }
+serde = "1.0.147"
+serde_json = "1.0.87"
 tokio = { version = "1.21.2", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
