--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,3 +20,4 @@ tracing-tree = "0.2.2"
 sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "chrono", "offline"] }
 uuid = { version = "1.2.2", features = ["v4"] }
 serde_urlencoded = "0.7.1"
+indoc = "1.0.8"
