--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -21,3 +21,4 @@ sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "chron
 uuid = { version = "1.2.2", features = ["v4"] }
 serde_urlencoded = "0.7.1"
 indoc = "1.0.8"
+async-trait = "0.1.60"
