Ok get both Discord and Twitch oauths working via me

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -22,3 +22,4 @@ uuid = { version = "1.2.2", features = ["v4"] }
 serde_urlencoded = "0.7.1"
 indoc = "1.0.8"
 async-trait = "0.1.60"
+chrono = "0.4.23"
