--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.0-rc.1"
-axum-macros = "0.2.3"
+axum = "0.6.2"
+axum-macros = "0.3.1"
 color-eyre = "0.6.2"
 poise = "0.4.1"
 reqwest = { version = "0.11.12", features = ["json", "rustls-tls"], default-features = false }
