--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -24,3 +24,10 @@ indoc = "1.0.8"
 async-trait = "0.1.60"
 chrono = "0.4.23"
 rss = "2.0.2"
+
+sentry = { version ="0.29.1", default-features = false, features = ["rustls", "backtrace", "contexts", "panic", "tower", "reqwest"] }
+sentry-tower = { version = "0.29.1", features = ["http"] }
+
+opentelemetry = { version = "0.18.0", features = ["rt-tokio"], default-features = false }
+opentelemetry-otlp = { version = "0.11.0", features = ["http-proto", "reqwest-rustls", "reqwest-client"], default-features = false }
+tracing-opentelemetry = "0.18.0"
