--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.0-rc.1"
-axum-macros = "0.2.3"
+axum = "0.6.2"
+axum-macros = "0.3.1"
 color-eyre = "0.6.2"
 poise = "0.4.1"
 reqwest = { version = "0.11.12", features = ["json", "rustls-tls"], default-features = false }
@@ -20,3 +20,14 @@ tracing-tree = "0.2.2"
 sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "chrono", "offline"] }
 uuid = { version = "1.2.2", features = ["v4"] }
 serde_urlencoded = "0.7.1"
+indoc = "1.0.8"
+async-trait = "0.1.60"
+chrono = "0.4.23"
+rss = "2.0.2"
+
+sentry = { version ="0.29.1", default-features = false, features = ["rustls", "backtrace", "contexts", "panic", "tower", "reqwest"] }
+sentry-tower = { version = "0.29.1", features = ["http"] }
+
+opentelemetry = { version = "0.18.0", features = ["rt-tokio"], default-features = false }
+opentelemetry-otlp = { version = "0.11.0", features = ["http-proto", "reqwest-rustls", "reqwest-client"], default-features = false }
+tracing-opentelemetry = "0.18.0"
