--- a/live.shots.yml
+++ b/live.shots.yml
@@ -2,15 +2,15 @@
   height: 2160
   width: 3840
   output: screenshots/4k.png
-- url: https://coreyja.fly.dev
+- url: https://beta.coreyja.com
   height: 1080
   width: 1920
   output: screenshots/desktop.png
-- url: https://coreyja.fly.dev
+- url: https://beta.coreyja.com
   height: 926
   width: 428
   output: screenshots/iphone.png
-- url: https://coreyja.fly.dev
+- url: https://beta.coreyja.com
   height: 1366
   width: 1024
   output: screenshots/ipad.png
