--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -15,8 +15,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install apt deps
         run: |
-          apt-get update
-          apt-get install protobuf-compiler -y
+          sudo apt-get update
+          sudo apt-get install protobuf-compiler -y
       - name: Setup | Rust
         uses: ATiltedTree/setup-rust@v1
         with:
