--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -26,7 +26,7 @@ jobs:
           rust-version: stable
           components: clippy
       - name: Build | Lint
-        run: cargo clippy --all-target
+        run: cargo clippy --all-targets --no-deps
   test:
     name: Test
     strategy:
