--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
-      - name: Install apt deps
-        run: |
-          sudo apt-get update
-          sudo apt-get install protobuf-compiler -y
+      - uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: protobuf-compiler
+          version: v0
       - name: Setup | Rust
         uses: ATiltedTree/setup-rust@v1
         with:
@@ -45,10 +45,10 @@ jobs:
         uses: ATiltedTree/setup-rust@v1
         with:
           rust-version: ${{ matrix.rust }}
-      - name: Install apt deps
-        run: |
-          sudo apt-get update
-          sudo apt-get install protobuf-compiler -y
+      - uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: protobuf-compiler
+          version: v0
       - uses: Swatinem/rust-cache@v2
         with:
           prefix-key: "v0-rust"
