Just hard code the path I currently have and lets see if it works

--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -1,7 +1,7 @@
 name: Rust Tests
 
 env:
-  DATABASE_URL: "sqlite:./db.sqlite3"
+  DATABASE_URL: "sqlite:/home/runner/work/coreyja.com/coreyja.com/server/db.sqlite3"
   SQLX_OFFLINE: true
 
 on:
