--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -50,6 +50,32 @@ jobs:
           prefix-key: "v0-rust"
       - name: Cargo Doc
         run: cargo doc --workspace --no-deps
+  db:
+    name: Check Schema
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup | Checkout
+        uses: actions/checkout@v2
+      - uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: protobuf-compiler
+          version: v0
+      - name: Setup | Rust
+        uses: ATiltedTree/setup-rust@v1
+        with:
+          rust-version: stable
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: "v0-rust"
+      - name: Install sqlx-cli
+        uses: baptiste0928/cargo-install@v1
+        with:
+          crate: sqlx-cli
+          version: 0.6.2
+      - run: |
+          cd server
+          cargo sqlx database setup
+          cargo sqlx prepare --check
   test:
     name: Test
     strategy:
@@ -76,12 +102,3 @@ jobs:
           prefix-key: "v0-rust"
       - name: Test
         run: cargo test --all-targets
-      - name: Install sqlx-cli
-        uses: baptiste0928/cargo-install@v1
-        with:
-          crate: sqlx-cli
-          version: 0.6.2
-      - run: |
-          cd server
-          cargo sqlx database setup
-          cargo sqlx prepare --check
