--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,11 @@ jobs:
       - checkout
       - with-rust-setup:
           do:
+            - run: |
+                curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64 && \
+                chmod +x tailwindcss-linux-x64 && \
+                mv tailwindcss-linux-x64 tailwindcss && \
+                ./tailwindcss -i server/src/styles/tailwind.css -o target/tailwind.css
             - run:
                 name: Build
                 command: cargo build --locked --all-targets
@@ -102,7 +107,5 @@ workflows:
           filters:
             branches:
               only:
-                - 'main'
-
-
+                - "main"
 # VS Code Extension Version: 1.5.1
