--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+default-run = "server"
+
 [dependencies]
 axum = "0.6.2"
 axum-macros = "0.3.1"
