--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -33,7 +33,7 @@ sentry-tower = { version = "0.29.1", features = ["http"] }
 opentelemetry = { version = "0.18.0", features = ["rt-tokio"], default-features = false }
 opentelemetry-otlp = { version = "0.11.0", features = ["http-proto", "reqwest-rustls", "reqwest-client"], default-features = false }
 tracing-opentelemetry = "0.18.0"
-maud = { git= "https://github.com/lambda-fairy/maud", features = ["axum"] }
+maud = { version = "0.25.0", features = ["axum"] }
 include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
 
 markdown = "1.0.0-alpha.7"
