--- a/.github/workflows/fly_deploy.yml
+++ b/.github/workflows/fly_deploy.yml
@@ -10,6 +10,7 @@ jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
