--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -25,7 +25,7 @@ serde_urlencoded = "0.7.1"
 indoc = "1.0.8"
 async-trait = "0.1.60"
 chrono = "0.4.23"
-rss = "2.0.2"
+rss = { version = "2.0.2", features = ["validation"] }
 
 sentry = { version ="0.29.1", default-features = false, features = ["rustls", "backtrace", "contexts", "panic", "tower", "reqwest"] }
 sentry-tower = { version = "0.29.1", features = ["http"] }
