Move to fly apps 2

--- a/fly.toml
+++ b/fly.toml
@@ -1,39 +1,43 @@
-app = "coreyja"
-kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
+# fly.toml app configuration file generated for coreyja on 2023-05-20T16:18:13-04:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-[mounts]
-  source="coreyja_data"
-  destination="/data"
+app = "coreyja"
+primary_region = "ewr"
+kill_signal = "SIGINT"
+kill_timeout = "5s"
 
 [env]
-  DATABASE_PATH="/data/coreyja.db"
-  OTEL_SERVICE_NAME="coreyja"
-  RUST_LOG="server=info"
+  DATABASE_PATH = "/data/coreyja.db"
+  OTEL_SERVICE_NAME = "coreyja"
+  RUST_LOG = "server=info"
+
+[[mounts]]
+  source = "coreyja_data_machines"
+  destination = "/data"
+  processes = ["app"]
 
 [[services]]
-  http_checks = []
+  protocol = "tcp"
   internal_port = 3000
   processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
+
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+    force_https = true
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
   [services.concurrency]
+    type = "connections"
     hard_limit = 25
     soft_limit = 20
-    type = "connections"
-
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
 
   [[services.tcp_checks]]
-    grace_period = "1s"
     interval = "15s"
-    restart_limit = 0
     timeout = "2s"
+    grace_period = "1s"
+    restart_limit = 0
