--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -43,3 +43,6 @@ clap = { version = "4.2.1", features = ["derive"] }
 syntect = "5.0.0"
 path-absolutize = "3.0.14"
 urlencoding = "2.1.2"
+
+tower-http = { version = "0.4.0", features = ["trace"] }
+tower = "0.4.13"
