--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -49,3 +49,5 @@ tower-http = { version = "0.4.0", features = ["trace"] }
 tower = "0.4.13"
 mime_guess = "2.0.4"
 thiserror = "1.0.40"
+
+image = "0.24.6"
