--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,5 @@
 [workspace]
 members = ["server", "sitemap-checker"]
+
+[workspace.dependencies]
+reqwest = { version = "0.11.12", features = ["json", "rustls-tls"], default-features = false }
