--- a/sitemap-checker/Cargo.toml
+++ b/sitemap-checker/Cargo.toml
@@ -8,6 +8,6 @@ license = "Apache-2.0"
 
 [dependencies]
 miette = { version = "5.6.0", features = ["fancy"] }
-reqwest = "0.11.16"
+reqwest = { workspace = true }
 sitemap = "0.4.1"
 tokio = { version = "1.27.0", features = ["full"] }
