--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -37,6 +37,8 @@ jobs:
           ./tailwindcss -i server/src/styles/tailwind.css -o target/tailwind.css
       - name: Build | Lint
         run: cargo clippy --all-targets --no-deps
+      - name: Cargo Deny
+        uses: EmbarkStudios/cargo-deny-action@v1
   doc:
     name: Doc
     runs-on: ubuntu-latest
