--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -37,8 +37,6 @@ jobs:
           ./tailwindcss -i server/src/styles/tailwind.css -o target/tailwind.css
       - name: Build | Lint
         run: cargo clippy --all-targets --no-deps
-      - name: Cargo Deny
-        uses: EmbarkStudios/cargo-deny-action@v1
   doc:
     name: Doc
     runs-on: ubuntu-latest
@@ -125,3 +123,19 @@ jobs:
           ./tailwindcss -i server/src/styles/tailwind.css -o target/tailwind.css
       - name: Test
         run: cargo test --all-targets
+  cargo-deny:
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        checks:
+          - advisories
+          - bans licenses sources
+
+    # Prevent sudden announcement of a new advisory from failing ci:
+    continue-on-error: ${{ matrix.checks == 'advisories' }}
+
+    steps:
+    - uses: actions/checkout@v3
+    - uses: EmbarkStudios/cargo-deny-action@v1
+      with:
+        command: check ${{ matrix.checks }}
