--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -139,6 +139,6 @@ jobs:
     - name: Install cargo-binstall
       run: curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
     - name: Install cargo-deny
-      run: cargo binstall cargo-deny
+      run: cargo binstall --no-confirm cargo-deny
     - name: Cargo Deny
       run: cargo deny check ${{ matrix.checks }}
