--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -125,15 +125,6 @@ jobs:
         run: cargo test --all-targets
   cargo-deny:
     runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        checks:
-          - advisories
-          - bans licenses sources
-
-    # Prevent sudden announcement of a new advisory from failing ci:
-    continue-on-error: ${{ matrix.checks == 'advisories' }}
-
     steps:
     - uses: actions/checkout@v3
     - name: Install cargo-binstall
@@ -141,4 +132,4 @@ jobs:
     - name: Install cargo-deny
       run: cargo binstall --no-confirm cargo-deny
     - name: Cargo Deny
-      run: cargo deny check ${{ matrix.checks }}
+      run: cargo deny check bans
