Make sure we aren't fetching the DB here

--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -132,4 +132,4 @@ jobs:
     - name: Install cargo-deny
       run: cargo binstall --no-confirm cargo-deny
     - name: Cargo Deny
-      run: cargo deny check bans
+      run: cargo deny check bans -d
