--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -2,6 +2,7 @@
 name = "server"
 version = "0.1.0"
 edition = "2021"
+license = "Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,7 +13,7 @@ axum = "0.6.2"
 axum-macros = "0.3.1"
 miette = { version = "5.7.0", features = ["fancy"] }
 poise = "0.4.1"
-reqwest = { version = "0.11.12", features = ["json", "rustls-tls"], default-features = false }
+reqwest = { workspace = true }
 serde = "1.0.147"
 serde_json = "1.0.87"
 tokio = { version = "1.21.2", features = ["full"] }
@@ -31,7 +32,7 @@ sentry = { version ="0.29.1", default-features = false, features = ["rustls", "b
 sentry-tower = { version = "0.29.1", features = ["http"] }
 
 opentelemetry = { version = "0.18.0", features = ["rt-tokio"], default-features = false }
-opentelemetry-otlp = { version = "0.11.0", features = ["http-proto", "reqwest-rustls", "reqwest-client"], default-features = false }
+opentelemetry-otlp = { version = "0.11.0", features = ["http-proto", "reqwest-rustls"], default-features = false }
 tracing-opentelemetry = "0.18.0"
 maud = { version = "0.25.0", features = ["axum"] }
 include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
