--- a/sitemap-checker/Cargo.toml
+++ b/sitemap-checker/Cargo.toml
@@ -2,11 +2,12 @@
 name = "sitemap-checker"
 version = "0.1.0"
 edition = "2021"
+license = "Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 miette = { version = "5.6.0", features = ["fancy"] }
-reqwest = "0.11.16"
+reqwest = { workspace = true }
 sitemap = "0.4.1"
 tokio = { version = "1.27.0", features = ["full"] }
