Process Static Assets to a struct at boot time
We optimize them images, and up next is pulling the optimized ones at view
time.

We also started pulling them but its not round tripping quite yet

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -51,3 +51,5 @@ mime_guess = "2.0.4"
 thiserror = "1.0.40"
 
 image = "0.24.6"
+cacache = { version = "11.6.0", default-features = false, features = ["tokio-runtime"] }
+ssri = "9.0.0"
