--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["server", "sitemap-checker"]
+members = ["server"]
 
 [workspace.dependencies]
 reqwest = { version = "0.11.12", features = ["json", "rustls-tls"], default-features = false }
