--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,7 +20,7 @@ tokio = { version = "1.21.2", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 tracing-tree = "0.2.2"
-sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "chrono", "offline"] }
+sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
 uuid = { version = "1.2.2", features = ["v4"] }
 serde_urlencoded = "0.7.1"
 indoc = "2.0.1"
@@ -28,12 +28,12 @@ async-trait = "0.1.60"
 chrono = "0.4.23"
 rss = { version = "2.0.2", features = ["validation"] }
 
-sentry = { version ="0.29.1", default-features = false, features = ["rustls", "backtrace", "contexts", "panic", "tower", "reqwest"] }
+sentry = { version ="0.31.5", default-features = false, features = ["rustls", "backtrace", "contexts", "panic", "tower", "reqwest"] }
 sentry-tower = { version = "0.31.5", features = ["http"] }
 
-opentelemetry = { version = "0.18.0", features = ["rt-tokio"], default-features = false }
-opentelemetry-otlp = { version = "0.11.0", features = ["http-proto", "reqwest-rustls", "reqwest-client"], default-features = false }
-tracing-opentelemetry = "0.18.0"
+opentelemetry = { version = "0.19.0", features = ["rt-tokio"], default-features = false }
+opentelemetry-otlp = { version = "0.12.0", features = ["http-proto", "reqwest-rustls", "reqwest-client"], default-features = false }
+tracing-opentelemetry = "0.19.0"
 maud = { version = "0.25.0", features = ["axum"] }
 include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
 
