--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -37,7 +37,7 @@ tracing-opentelemetry = "0.19.0"
 maud = { version = "0.25.0", features = ["axum"] }
 include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
 
-markdown = "1.0.0-alpha.7"
+markdown = "1.0.0-alpha"
 serde_yaml = "0.9"
 
 clap = { version = "4.2.1", features = ["derive"] }
