--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,19 +20,36 @@ markdown = "1.0.0-alpha"
 maud = { version = "0.25.0", features = ["axum"] }
 miette = { version = "5.7", features = ["fancy"] }
 mime_guess = "2.0"
-opentelemetry = { version = "0.19.0", features = ["rt-tokio"], default-features = false }
-opentelemetry-otlp = { version = "0.12.0", features = ["http-proto", "reqwest-rustls", "reqwest-client"], default-features = false }
+opentelemetry = { version = "0.19.0", features = [
+  "rt-tokio",
+], default-features = false }
+opentelemetry-otlp = { version = "0.12.0", features = [
+  "http-proto",
+  "reqwest-rustls",
+  "reqwest-client",
+], default-features = false }
 path-absolutize = "3.0"
 poise = "0.5.5"
 reqwest = { workspace = true }
 rss = { version = "2.0", features = ["validation"] }
-sentry = { version ="0.31.5", default-features = false, features = ["rustls", "backtrace", "contexts", "panic", "tower", "reqwest"] }
+sentry = { version = "0.31.5", default-features = false, features = [
+  "rustls",
+  "backtrace",
+  "contexts",
+  "panic",
+  "tower",
+  "reqwest",
+] }
 sentry-tower = { version = "0.31.5", features = ["http"] }
 serde = "1.0"
 serde_json = "1.0"
 serde_urlencoded = "0.7.1"
 serde_yaml = "0.9"
-sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
+sqlx = { version = "0.7", features = [
+  "sqlite",
+  "runtime-tokio-rustls",
+  "chrono",
+] }
 syntect = "5.0"
 thiserror = "1.0"
 tokio = { version = "1.21", features = ["full"] }
