--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,4 +2,7 @@
 members = ["server"]
 
 [workspace.dependencies]
-reqwest = { version = "0.11.12", features = ["json", "rustls-tls"], default-features = false }
+reqwest = { version = "0.11.12", features = [
+  "json",
+  "rustls-tls",
+], default-features = false }
