Format and fix fly.toml

--- a/fly.toml
+++ b/fly.toml
@@ -9,34 +9,34 @@ kill_signal = "SIGINT"
 kill_timeout = "5s"
 
 [env]
-  DATABASE_PATH = "/data/coreyja.db"
-  OTEL_SERVICE_NAME = "coreyja"
+DATABASE_PATH = "/data/coreyja.db"
+OTEL_SERVICE_NAME = "coreyja"
 
-[[mounts]]
-  source = "coreyja_data_machines"
-  destination = "/data"
-  processes = ["app"]
+[mounts]
+source = "coreyja_data_machines"
+destination = "/data"
+processes = ["app"]
 
 [[services]]
-  protocol = "tcp"
-  internal_port = 3000
-  processes = ["app"]
+protocol = "tcp"
+internal_port = 3000
+processes = ["app"]
 
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-    force_https = true
+[[services.ports]]
+port = 80
+handlers = ["http"]
+force_https = true
 
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
-  [services.concurrency]
-    type = "connections"
-    hard_limit = 25
-    soft_limit = 20
+[[services.ports]]
+port = 443
+handlers = ["tls", "http"]
+[services.concurrency]
+type = "connections"
+hard_limit = 25
+soft_limit = 20
 
-  [[services.tcp_checks]]
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "1s"
-    restart_limit = 0
+[[services.tcp_checks]]
+interval = "15s"
+timeout = "2s"
+grace_period = "1s"
+restart_limit = 0
