Get script working I think for all 2023 videos

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -70,3 +70,5 @@ cacache = { version = "11.6.0", default-features = false, features = [
   "tokio-runtime",
 ] }
 ssri = "9.0.0"
+whisper-rs = { version = "0.8.0" }
+hound = "3.5.0"
