--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,30 @@
 [workspace]
-members = ["server"]
+members = ["server", "video-toolkit", "tracing-common"]
 
 [workspace.dependencies]
+clap = { version = "4.2", features = ["derive"] }
 reqwest = { version = "0.11.12", features = [
   "json",
   "rustls-tls",
 ], default-features = false }
+miette = { version = "5.7", features = ["fancy"] }
+
+tokio = { version = "1.21", features = ["full"] }
+
+tracing = "0.1.37"
+tracing-opentelemetry = "0.19.0"
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+tracing-tree = "0.2.2"
+opentelemetry = { version = "0.19.0", features = [
+  "rt-tokio",
+], default-features = false }
+opentelemetry-otlp = { version = "0.12.0", features = [
+  "http-proto",
+  "reqwest-rustls",
+  "reqwest-client",
+], default-features = false }
+
+cacache = { version = "11.6.0", default-features = false, features = [
+  "tokio-runtime",
+] }
+ssri = "9.0.0"
