--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,27 +10,18 @@ default-run = "server"
 
 [dependencies]
 async-trait = "0.1.60"
-aws-config = "0.55.3"
-aws-sdk-s3 = "0.28.0"
 axum = "0.6.2"
 axum-macros = "0.3.1"
 chrono = { version = "0.4.23", default-features = false }
-clap = { version = "4.2", features = ["derive"] }
-futures = "0.3.28"
+clap = { workspace = true }
 include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
 indoc = "2.0"
 markdown = "1.0.0-alpha"
 maud = { version = "0.25.0", features = ["axum"] }
-miette = { version = "5.7", features = ["fancy"] }
+miette = { workspace = true }
 mime_guess = "2.0"
-opentelemetry = { version = "0.19.0", features = [
-  "rt-tokio",
-], default-features = false }
-opentelemetry-otlp = { version = "0.12.0", features = [
-  "http-proto",
-  "reqwest-rustls",
-  "reqwest-client",
-], default-features = false }
+opentelemetry = { workspace = true }
+opentelemetry-otlp = { workspace = true }
 path-absolutize = "3.0"
 poise = "0.5.5"
 reqwest = { workspace = true }
@@ -55,20 +46,13 @@ sqlx = { version = "0.7", features = [
 ] }
 syntect = "5.0"
 thiserror = "1.0"
-tokio = { version = "1.21", features = ["full"] }
+tokio = { workspace = true }
 tower = "0.4.13"
 tower-http = { version = "0.4.0", features = ["trace"] }
-tracing = "0.1.37"
-tracing-opentelemetry = "0.19.0"
-tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
-tracing-tree = "0.2.2"
+tracing = { workspace = true }
+tracing-opentelemetry = { workspace = true }
+tracing-subscriber = { workspace = true }
+tracing-tree = { workspace = true }
 url = "2.4.0"
 urlencoding = "2.1"
 uuid = { version = "1.2", features = ["v4"] }
-
-cacache = { version = "11.6.0", default-features = false, features = [
-  "tokio-runtime",
-] }
-ssri = "9.0.0"
-whisper-rs = { version = "0.8.0" }
-hound = "3.5.0"
