--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,6 @@ cacache = { version = "11.6.0", default-features = false, features = [
   "tokio-runtime",
 ] }
 ssri = "9.0.0"
+
+serde = "1.0"
+serde_json = "1.0"
