--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -35,8 +35,8 @@ sentry = { version = "0.31.5", default-features = false, features = [
   "reqwest",
 ] }
 sentry-tower = { version = "0.31.5", features = ["http"] }
-serde = "1.0"
-serde_json = "1.0"
+serde = { workspace = true }
+serde_json = { workspace = true }
 serde_urlencoded = "0.7.1"
 serde_yaml = "0.9"
 sqlx = { version = "0.7", features = [
@@ -56,3 +56,5 @@ tracing-tree = { workspace = true }
 url = "2.4.0"
 urlencoding = "2.1"
 uuid = { version = "1.2", features = ["v4"] }
+
+openai = { path = "../openai" }
