Get summarization working for smaller files. Might strip out the timestamps next

--- a/video-toolkit/Cargo.toml
+++ b/video-toolkit/Cargo.toml
@@ -22,3 +22,5 @@ tracing = { workspace = true }
 tracing-common = { path = "../tracing-common" }
 
 futures = "0.3.28"
+
+openai = { path = "../openai" }
