--- a/video-toolkit/Cargo.toml
+++ b/video-toolkit/Cargo.toml
@@ -25,3 +25,6 @@ openai = { path = "../openai" }
 futures = "0.3.28"
 
 regex = "1.9.1"
+dialoguer = "0.10.4"
+google-youtube3 = "5.0.2"
+tokio-util = { version = "0.7.8", features = ["io", "io-util"] }
