Add Stream Tab (#48)
* Get the list of objects

* Download videos and convert to single channel audio. About ready to whisper

* Get script working I think for all 2023 videos

* Pickup changes from last night

* Move some stuff to Clap cli args

* Refactor into a cli thats not in server

* Extract openai

* Get summarization working for smaller files. Might strip out the timestamps next

* Strip the timestamps out before processing in gpt

This makes it through most before we just max tokens again

* Chunk long transcripts

* yt_v1

* fmt

* Try to upload to youtube

* Summary change and attach url after upload

* About ready to make files for each video, so we can throw them on the blog

* Script to gen md files, and run the script

* Run prettier cause why not

* Do some formatting

* Validate all the streams can be loaded fine

* Get streams page to render :tada:

* Add to header

* Render the stream page

* Add embed when Youtube video exists

* Dirty extraction of posts to own crate

* Get the upload script to work, and try to get it to write the url back for uploaded videos

* Fix upload script it did this one fully on its own

* Get three more uploaded before I hit my youtube limit

* Get one more uploaded

* A few more videos

* Fix some long titles and validate against the length

* Upload more videos

* Upload today's episodes

* Today's 6

* Upload some streams

* Upload more, only 9 to go!

* Get a version without uploading working for a single video

* Upload more videos and delete two with other people for now

* Change some descriptions

* Upload the last 4 videos

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,40 @@
 [workspace]
-members = ["server"]
+members = ["posts", "server", "video-toolkit", "tracing-common"]
 
 [workspace.dependencies]
+clap = { version = "4.2", features = ["derive"] }
 reqwest = { version = "0.11.12", features = [
   "json",
   "rustls-tls",
 ], default-features = false }
+miette = { version = "5.7", features = ["fancy"] }
+
+tokio = { version = "1.21", features = ["full"] }
+
+tracing = "0.1.37"
+tracing-opentelemetry = "0.19.0"
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+tracing-tree = "0.2.2"
+opentelemetry = { version = "0.19.0", features = [
+  "rt-tokio",
+], default-features = false }
+opentelemetry-otlp = { version = "0.12.0", features = [
+  "http-proto",
+  "reqwest-rustls",
+  "reqwest-client",
+], default-features = false }
+
+cacache = { version = "11.6.0", default-features = false, features = [
+  "tokio-runtime",
+] }
+ssri = "9.0.0"
+
+serde = "1.0"
+serde_json = "1.0"
+
+chrono = { version = "0.4.23", default-features = false }
+
+rss = { version = "2.0", features = ["validation"] }
+markdown = "1.0.0-alpha"
+include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
+path-absolutize = "3.0"
