--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,26 +12,20 @@ default-run = "server"
 async-trait = "0.1.60"
 axum = "0.6.2"
 axum-macros = "0.3.1"
-chrono = { version = "0.4.23", default-features = false }
-clap = { version = "4.2", features = ["derive"] }
-include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
+chrono = { workspace = true }
+clap = { workspace = true }
+include_dir = { workspace = true }
 indoc = "2.0"
-markdown = "1.0.0-alpha"
+markdown = { workspace = true }
 maud = { version = "0.25.0", features = ["axum"] }
-miette = { version = "5.7", features = ["fancy"] }
+miette = { workspace = true }
 mime_guess = "2.0"
-opentelemetry = { version = "0.19.0", features = [
-  "rt-tokio",
-], default-features = false }
-opentelemetry-otlp = { version = "0.12.0", features = [
-  "http-proto",
-  "reqwest-rustls",
-  "reqwest-client",
-], default-features = false }
-path-absolutize = "3.0"
+opentelemetry = { workspace = true }
+opentelemetry-otlp = { workspace = true }
+path-absolutize = { workspace = true }
 poise = "0.5.5"
 reqwest = { workspace = true }
-rss = { version = "2.0", features = ["validation"] }
+rss = { workspace = "true" }
 sentry = { version = "0.31.5", default-features = false, features = [
   "rustls",
   "backtrace",
@@ -41,10 +35,9 @@ sentry = { version = "0.31.5", default-features = false, features = [
   "reqwest",
 ] }
 sentry-tower = { version = "0.31.5", features = ["http"] }
-serde = "1.0"
-serde_json = "1.0"
+serde = { workspace = true }
+serde_json = { workspace = true }
 serde_urlencoded = "0.7.1"
-serde_yaml = "0.9"
 sqlx = { version = "0.7", features = [
   "sqlite",
   "runtime-tokio-rustls",
@@ -52,13 +45,16 @@ sqlx = { version = "0.7", features = [
 ] }
 syntect = "5.0"
 thiserror = "1.0"
-tokio = { version = "1.21", features = ["full"] }
+tokio = { workspace = true }
 tower = "0.4.13"
 tower-http = { version = "0.4.0", features = ["trace"] }
-tracing = "0.1.37"
-tracing-opentelemetry = "0.19.0"
-tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
-tracing-tree = "0.2.2"
+tracing = { workspace = true }
+tracing-opentelemetry = { workspace = true }
+tracing-subscriber = { workspace = true }
+tracing-tree = { workspace = true }
 url = "2.4.0"
 urlencoding = "2.1"
 uuid = { version = "1.2", features = ["v4"] }
+
+openai = { path = "../openai" }
+posts = { path = "../posts" }
