Setting up byte to be fully functional
That title was written by the bot, from me asking it aloud!
So while the actual message isn't great, I think its pretty cool that Byte helped out.

We know can record audio into a buffer and transcribe it at regular intervals.
If we find the word "Byte" in the transcription we can trigger the bot.
Right now we send the transcription to OpenAI and use the MacOS 'say' Command
to hear the response!

From here we can work on our prompt to give Byte a personality.
We'll likely also want to work on performance so the replies come in quicker
after I say them

--- a/byte/Cargo.toml
+++ b/byte/Cargo.toml
@@ -15,14 +15,9 @@ serde.workspace = true
 tracing-common = { path = "../tracing-common" }
 openai = { path = "../openai" }
 cpal = "0.15.2"
-hound = "3.5.0"
-candle-core = "0.1.0"
-candle-nn = "0.1.0"
-hf-hub = "0.2.0"
 rand = "0.8.5"
-tokenizers = "0.13.3"
-num-traits = "0.2.16"
-byteorder = "1.4.3"
+# num-traits = "0.2.16"
+# byteorder = "1.4.3"
 serde_json.workspace = true
 samplerate = "0.2.4"
 whisper-rs = { version = "0.8.0" }
