--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -25,7 +25,7 @@ opentelemetry-otlp = { workspace = true }
 path-absolutize = { workspace = true }
 poise = "0.5.5"
 reqwest = { workspace = true }
-rss = { workspace = "true" }
+rss = { workspace = true }
 sentry = { version = "0.31.5", default-features = false, features = [
   "rustls",
   "backtrace",
