--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: protobuf-compiler
+          packages: protobuf-compiler libasound2-dev
           version: v0
       - uses: dtolnay/rust-toolchain@stable
         with:
@@ -43,7 +43,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: protobuf-compiler
+          packages: protobuf-compiler libasound2-dev
           version: v0
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
@@ -56,34 +56,6 @@ jobs:
           ./tailwindcss -i server/src/styles/tailwind.css -o target/tailwind.css
       - name: Cargo Doc
         run: cargo doc --workspace --no-deps
-  db:
-    name: Check Schema
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup | Checkout
-        uses: actions/checkout@v2
-      - uses: awalsh128/cache-apt-pkgs-action@latest
-        with:
-          packages: protobuf-compiler
-          version: v0
-      - uses: dtolnay/rust-toolchain@stable
-      - uses: Swatinem/rust-cache@v2
-        with:
-          prefix-key: "v1-rust"
-      - name: Install sqlx-cli
-        uses: baptiste0928/cargo-install@v1
-        with:
-          crate: sqlx-cli
-          version: 0.6.2
-      - run: |
-          curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64 && \
-          chmod +x tailwindcss-linux-x64 && \
-          mv tailwindcss-linux-x64 tailwindcss && \
-          ./tailwindcss -i server/src/styles/tailwind.css -o target/tailwind.css
-      - run: |
-          cd server
-          cargo sqlx database setup
-          cargo sqlx prepare --check
   test:
     name: Test
     strategy:
@@ -102,7 +74,7 @@ jobs:
           toolchain: ${{ matrix.rust }}
       - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: protobuf-compiler
+          packages: protobuf-compiler libasound2-dev
           version: v0
       - uses: Swatinem/rust-cache@v2
         with:
