--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
-members = ["posts", "server", "video-toolkit", "tracing-common"]
+members = ["byte", "posts", "server", "tracing-common", "video-toolkit"]
+resolver = "2"
 
 [workspace.dependencies]
 clap = { version = "4.2", features = ["derive"] }
@@ -29,7 +30,7 @@ cacache = { version = "11.6.0", default-features = false, features = [
 ] }
 ssri = "9.0.0"
 
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 chrono = { version = "0.4.23", default-features = false }
