--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -53,3 +53,4 @@ uuid = { version = "1.2", features = ["v4"] }
 
 openai = { path = "../openai" }
 posts = { path = "../posts" }
+itertools = "0.11.0"
