Try setting nightly to experimental

--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -75,8 +75,14 @@ jobs:
           - ubuntu-latest
         rust:
           - stable
-          - nightly
+        experimental:
+          - false
+        include:
+          - rust: nightly
+            os: ubuntu-latest
+            experimental: true
     runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.experimental }}
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
