--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -55,3 +55,4 @@ openai = { path = "../openai" }
 posts = { path = "../posts" }
 itertools = "0.11.0"
 sentry-tracing = "0.31.8"
+rustc_version_runtime = "0.3.0"
