Github Oauth on a basic level seems to be working now, need to set sessions still though

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,12 @@ rss = { version = "2.0", features = ["validation"] }
 markdown = "1.0.0-alpha"
 include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
 path-absolutize = "3.0"
+
+sqlx = { version = "0.7", features = [
+  "postgres",
+  "runtime-tokio-rustls",
+  "chrono",
+  "migrate",
+  "macros",
+  "uuid",
+] }
