--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -53,8 +53,11 @@ uuid = { version = "1.2", features = ["v4"] }
 
 openai = { path = "../openai" }
 posts = { path = "../posts" }
+db = { path = "../db" }
+sqlx = { workspace = true }
 itertools = "0.12.0"
 sentry-tracing = "0.31.8"
+typify = "0.0.14"
 
 [build-dependencies]
 vergen = { version = "8.0.0", features = ["git", "gitoxide", "rustc"] }
